Bug 4335 - it87.c: bad detection of it8712f-a chip
Summary: it87.c: bad detection of it8712f-a chip
Status: CLOSED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Hardware Monitoring (show other bugs)
Hardware: i386 Linux
: P2 normal
Assignee: Jean Delvare
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-03-14 09:17 UTC by Przemyslaw Bialek
Modified: 2005-08-08 12:13 UTC (History)
1 user (show)

See Also:
Kernel Version: 2.6.11
Subsystem:
Regression: ---
Bisected commit-id:


Attachments
Skip redundant detection step for Super-I/O IT87xxF chips (565 bytes, patch)
2005-03-15 12:41 UTC, Jean Delvare
Details | Diff

Description Przemyslaw Bialek 2005-03-14 09:17:28 UTC
Distribution: PLD
Hardware Environment: nforce4 (ga-k8nxp-sli), Athlon64 3000+
Software Environment: gcc 3.4.3, binutils 2.15.94.0.2.2, module-init-tools 3.0
Problem Description: in file it87.c in function it87_detect in line 743
(inb_p(address + 7) != i)) on my hardware the result in diffrent than in other
registers, and detection fails. When i comment this line, chip is detected
properly, and I have working sensors.
Comment 1 Jean Delvare 2005-03-15 12:36:55 UTC
We can even get rid of that detection step for Super-I/O chips. The method used
is inherited from the lm78 driver, the IT8705F and I78712F datasheets don't
mention anything about it. For Super-I/O chips, the detection was already done
before anyway.
Comment 2 Jean Delvare 2005-03-15 12:41:43 UTC
Created attachment 4724 [details]
Skip redundant detection step for Super-I/O IT87xxF chips
Comment 3 Przemyslaw Bialek 2005-03-16 02:04:50 UTC
Thanks for the explanation. The patch works.

Note You need to log in before you can comment on or make changes to this bug.